--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ input[type=number] {
 
 .page.active {
     display: block;
-    /* animation: fadeIn 0.3s ease; */
+    animation: fadeIn 0.3s ease;
 }
 
 
