--- a/style.css
+++ b/style.css
@@ -329,6 +329,14 @@ input[type=number] {
     transition: border 0.2s, box-shadow 0.2s;
 }
 
+.centered-input.disabled {
+    pointer-events: none;
+    /* background-color: #ece6ff; */
+    opacity: 0.6;
+    border: 2px solid #00b3ff;
+    /* color: #ffffff; */
+}
+
 .centered-input:focus {
     border-color: #6c5ce7;
     box-shadow: 0 0 6px rgba(108, 92, 231, 0.4);
